--- a/pallets/nft-order/Cargo.toml
+++ b/pallets/nft-order/Cargo.toml
@@ -18,7 +18,7 @@ pallet-uniques = { version = '3.0.0', path = '../../substrate/frame/uniques', de
 max-encoded-len = { version = "3.0.0", path = '../../substrate/max-encoded-len', default-features = false, features = [ "derive" ] }
 
 [dev-dependencies]
-sp-std = { versstdn = '3.0.0', path = '../../substrate/primitives/std' }
+sp-std = { version = '3.0.0', path = '../../substrate/primitives/std' }
 sp-io = { version = '3.0.0', path = '../../substrate/primitives/io' }
 sp-runtime = { version = '3.0.0', path = '../../substrate/primitives/runtime' }
 pallet-balances = { version = '3.0.0', path = '../../substrate/frame/balances' }
