--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -34,8 +34,10 @@ pallet-identity = { version = "3.0.0", default-features = false, path = "../subs
 pallet-im-online = { version = "3.0.0", default-features = false, path = "../substrate/frame/im-online" }
 pallet-indices = { version = "3.0.0", default-features = false, path = "../substrate/frame/indices" }
 pallet-membership = { version = "3.0.0", default-features = false, path = "../substrate/frame/membership" }
+pallet-nft = { version = "0.1.0", path = "../pallets/nft", default-features = false }
 pallet-nft-order = { version = "0.1.0", path = "../pallets/nft-order", default-features = false }
 pallet-offences = { version = "3.0.0", default-features = false, path = "../substrate/frame/offences" }
+pallet-offences-benchmarking = { version = "3.0.0", path = "../substrate/frame/offences/benchmarking", default-features = false, optional = true }
 pallet-randomness-collective-flip = { version = '3.0.0', path = '../substrate/frame/randomness-collective-flip', default-features = false }
 pallet-scheduler = { version = "3.0.0", default-features = false, path = "../substrate/frame/scheduler" }
 pallet-session = { version = '3.0.0', path = '../substrate/frame/session', default-features = false }
@@ -48,7 +50,6 @@ pallet-transaction-payment = { version = '3.0.0', path = '../substrate/frame/tra
 pallet-transaction-payment-rpc-runtime-api = { version = '3.0.0', path = '../substrate/frame/transaction-payment/rpc/runtime-api', default-features = false }
 pallet-transaction-storage = { version = '3.0.0', path = '../substrate/frame/transaction-storage', default-features = false  }
 pallet-treasury = { version = "3.0.0", default-features = false, path = "../substrate/frame/treasury" }
-pallet-uniques = { version = '3.0.0', path = '../substrate/frame/uniques', default-features = false }
 pallet-utility = { version = '3.0.0', path = '../substrate/frame/utility', default-features = false }
 nft360-primitives = { version = "0.1.0", default-features = false, path = "../primitives" }
 sp-api = { version = '3.0.0', path = '../substrate/primitives/api', default-features = false }
@@ -78,27 +79,27 @@ runtime-benchmarks = [
     'frame-support/runtime-benchmarks',
     'frame-system-benchmarking',
     'frame-system/runtime-benchmarks',
-	"pallet-babe/runtime-benchmarks",
+	'pallet-babe/runtime-benchmarks',
     'pallet-balances/runtime-benchmarks',
     'pallet-bounties/runtime-benchmarks',
-	"pallet-collective/runtime-benchmarks",
-	"pallet-democracy/runtime-benchmarks",
-	"pallet-election-provider-multi-phase/runtime-benchmarks",
-	"pallet-elections-phragmen/runtime-benchmarks",
-	"pallet-grandpa/runtime-benchmarks",
-	"pallet-identity/runtime-benchmarks",
-	"pallet-im-online/runtime-benchmarks",
-	"pallet-indices/runtime-benchmarks",
-	"pallet-membership/runtime-benchmarks",
+	'pallet-collective/runtime-benchmarks',
+	'pallet-democracy/runtime-benchmarks',
+	'pallet-election-provider-multi-phase/runtime-benchmarks',
+	'pallet-elections-phragmen/runtime-benchmarks',
+	'pallet-grandpa/runtime-benchmarks',
+	'pallet-identity/runtime-benchmarks',
+	'pallet-im-online/runtime-benchmarks',
+	'pallet-indices/runtime-benchmarks',
+	'pallet-membership/runtime-benchmarks',
+    'pallet-nft/runtime-benchmarks',
     # 'pallet-nft-order/runtime-benchmarks',
-	"pallet-offences/runtime-benchmarks",
-	"pallet-scheduler/runtime-benchmarks",
-	"pallet-session-benchmarking",
-	"pallet-staking/runtime-benchmarks",
+    'pallet-offences-benchmarking',
+	'pallet-scheduler/runtime-benchmarks',
+	'pallet-session-benchmarking',
+	'pallet-staking/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
-	"pallet-transaction-storage/runtime-benchmarks",
-	"pallet-treasury/runtime-benchmarks",
-    'pallet-uniques/runtime-benchmarks',
+	'pallet-transaction-storage/runtime-benchmarks',
+	'pallet-treasury/runtime-benchmarks',
     'pallet-utility/runtime-benchmarks',
     'sp-runtime/runtime-benchmarks',
 ]
@@ -125,6 +126,7 @@ std = [
     'pallet-membership/std',
     'pallet-offences/std',
     'pallet-randomness-collective-flip/std',
+    'pallet-nft/std',
     'pallet-nft-order/std',
     'pallet-sudo/std',
     'pallet-scheduler/std',
@@ -134,7 +136,6 @@ std = [
     'pallet-transaction-payment-rpc-runtime-api/std',
 	'pallet-transaction-storage/std',
 	'pallet-treasury/try-runtime',
-    'pallet-uniques/std',
     'pallet-utility/std',
     'sp-api/std',
 	'sp-authority-discovery/std',
