--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -92,7 +92,7 @@ runtime-benchmarks = [
 	'pallet-indices/runtime-benchmarks',
 	'pallet-membership/runtime-benchmarks',
     'pallet-nft/runtime-benchmarks',
-    # 'pallet-nft-order/runtime-benchmarks',
+    'pallet-nft-order/runtime-benchmarks',
     'pallet-offences-benchmarking',
 	'pallet-scheduler/runtime-benchmarks',
 	'pallet-session-benchmarking',
