--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -8,7 +8,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 jsonrpc-core = "15.1.0"
-nft360-primitives = { version = "0.1.0", path = "../primitives" }
+node-primitives = { package = "nft360-primitives", version = "0.1.0", path = "../primitives" }
 pallet-transaction-payment-rpc = { version = "3.0.0", path = "../substrate/frame/transaction-payment/rpc/" }
 sc-client-api = { version = "3.0.0", path = "../substrate/client/api" }
 sc-consensus-babe = { version = "0.9.0", path = "../substrate/client/consensus/babe" }
