--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -15,6 +15,10 @@ frame-support = { version = "3.0.0", default-features = false, path = "../../sub
 frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
 frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
 log = { version = "0.4.14", default-features = false }
+base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
+webpki = { path = "../../vendors/webpki", default-features = false }
+p256 = { version = "0.9.0", default-features = false, features = ["ecdsa"] }
+serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
 sp-std = { version = "3.0.0", path = "../../substrate/primitives/std" }
