--- a/pallets/storage/Cargo.toml
+++ b/pallets/storage/Cargo.toml
@@ -25,6 +25,7 @@ sp-std = { version = "3.0.0", path = "../../substrate/primitives/std" }
 sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
 sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
 pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }
+pallet-timestamp = { version = "3.0.0", path = "../../substrate/frame/timestamp" }
 
 [features]
 default = ["std"]
